reduce column count in .why-visit for XL screens to stop overflowing text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ footer ul li a {
 .map-and-address {
     height: 600px;
     width: 80%;
-    margin:0 auto;
+    margin: 0 auto;
     margin-top: 4rem;
     display: grid;
     column-count: 2;
@@ -311,7 +311,7 @@ footer ul li a {
 .address-details {
     width: 100%;
     height: 100%;
-    padding:2rem;
+    padding: 2rem;
 }
 
 /* Menu Page */
@@ -704,6 +704,10 @@ textarea {
         margin: 0 auto;
     }
 
+    .why-visit {
+        column-count: 2;
+    }
+
 }
 
 @media only screen and (max-width: 1200px) {
@@ -786,7 +790,7 @@ textarea {
     /* Find Us Page Media Queries up to 992px*/
 
     .map-and-address {
-        width:80%;
+        width: 80%;
         column-count: 1;
         grid-template-columns: 1fr;
     }
@@ -841,7 +845,7 @@ textarea {
     /* Find Us Page Media Queries up to 600px*/
 
     .map-and-address {
-        width:100%;
+        width: 100%;
     }
 
     /* Book Now Page Media Queries up to 600px*/
